add solution for day 5

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(AdventOfCode24 
-"main.cpp" "pch.h" "day1.cpp" "day2.cpp" "day3.cpp" "day4.cpp" "AdventSolutionFactory.cpp")
+"main.cpp" "pch.h" "day1.cpp" "day2.cpp" "day3.cpp" "day4.cpp" "day5.cpp" "AdventSolutionFactory.cpp")
 
 target_precompile_headers(AdventOfCode24 PRIVATE "pch.h")
 
