add solution for day 8

--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(AdventOfUtils STATIC "misc.cpp" "CCell.cpp" "CGrid.cpp")
+add_library(AdventOfUtils STATIC "misc.cpp" "CCell.cpp" "CGrid.cpp" "CVector.cpp")
 set_property(TARGET AdventOfUtils PROPERTY CXX_STANDARD 23)
